# fuelsdk-search

./: .cookiecutter.json  .coveragerc  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  LICENSE.txt  README.md  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  installation.rst  reference.rst  requirements.txt  usage.rst
fuelsdk_search/: __init__.py  operand.py  operator.py
src/fuelsdk_search/: __init__.py  filters.py  operand.py  operator.py  operators.py  skeleton.py  types.py
tests/: __init__.py  conftest.py  test_skeleton.py
