[tool.poetry]
name = "fuelsdk-search"
version = "0.1.0"
description = "Convenient search_filter building for FuelSDK using overloaded operators"
authors = ["Clayton VonDras <clayton@vondr.as>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vondras/fuelsdk-search"
repository = "https://github.com/vondras/fuelsdk-search"
documentation = "https://fuelsdk-search.readthedocs.io"
keywords = ["fuelsdk-search"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",

    "License :: OSI Approved :: MIT License",

    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/vondras/fuelsdk-search/issues"
Changelog = "https://github.com/vondras/fuelsdk-search/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
mypy = "^0.812"
typeguard = "^2.11.1"
xdoctest = {extras = ["colors"], version = "^0.15.4"}
sphinx = "^3.5.2"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.11.1"
flake8 = "^3.8.4"
black = "^20.8b1"
recommonmark = "^0.7.1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.3.2"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.7.0"
reorder-python-imports = "^2.4.0"
pre-commit-hooks = "^3.4.0"
sphinx-rtd-theme = "^0.5.1"
sphinx-click = "^2.6.0"
Pygments = "^2.8.1"


[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["fuelsdk_search"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "if settings.DEBUG:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == __main__:"
]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
